[package]
name = "robius-demo-simple"
version = "0.1.0"
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
edition = "2021"
description = "Simple demo of Robius platform abstraction crates from a Makepad app"
license = "MIT OR Apache-2.0"

[dependencies]
makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "rik" }

robius-authentication = { git = "https://github.com/project-robius/robius-authentication", optional = true }
robius-open = { git = "https://github.com/project-robius/robius-open", optional = true }

## Currently we must explicitly tell the robius-* crates that we're building a Makepad app,
## which is relevant for any crate that depends on `robius-android-env`.
[target.'cfg(target_os = "android")'.dependencies]
robius-android-env = { version = "0.1.0", features = [ "makepad" ] }

[features]
default = ["authentication", "open"]
authentication = ["dep:robius-authentication"]
open = ["dep:robius-open"]
