[package]
name = "robius-demo-simple"
version = "0.1.0"
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
edition = "2021"
description = "Simple demo of Robius platform abstraction crates from a Makepad app"
license = "MIT OR Apache-2.0"

[dependencies]
makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "rik" }

robius-authentication = { git = "https://github.com/project-robius/robius-authentication", optional = true }
robius-location = { git = "https://github.com/project-robius/robius-location", optional = true }
# robius-location = { path = "../robius-location", optional = true }
robius-open = { git = "https://github.com/project-robius/robius-open", optional = true }

## Including this crate automatically configures all `robius-*` crates to work with Makepad.
robius-use-makepad = "0.1.0"

[features]
default = ["authentication", "location", "open"]
authentication = ["dep:robius-authentication"]
location = ["dep:robius-location"]
open = ["dep:robius-open"]
